Mostly Javascript Changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,5 +31,8 @@ button {
   text-align: center;
 }
 .imageChange {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
